# pidsadka-bot

./: .editorconfig  Makefile  README.md  annotations.json  annotations.txt  config.cfg  pyproject.toml  test.py  texts.txt  train.spacy  trainer.py
