[tool.poetry]
name = "pidsadka-bot"
version = "0.1.0"
description = ""
authors = ["gebeto <slavik.nychkalo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.2.3"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
